--- a/style.css
+++ b/style.css
@@ -19,20 +19,60 @@ h1, h2, h3, h4, h5, h6 {
     letter-spacing: -1px;
 }
 
+/***********STYLE FOR MOBILE************/
 
 /*Common styles*/
+.collapse {
+    display: none;
+}
+
+.collapse.show {
+    display: block;
+}
+
+@media (min-width: 576px) {
+    .collapse.dont-collapse-sm {
+        display: block;
+        height: auto !important;
+        visibility: visible;
+    }
+}
+
+button {
+    font-size: 25px;
+    font-weight: 700;
+    background-color: #47464B;
+    color: #EEC0C0;
+    border: none;
+    width: 100%;
+    position: relative;
+}
+
+button .arrow {
+    position: absolute;
+    right: 15px;
+    top: 2px;
+    width: 16px;
+    height: 16px;
+}
+
+button .arrow i {
+    transform: rotate(180deg);
+    transition: 0.2s all ease-in-out;
+}
+
+button.collapsed .arrow i {
+    transform: rotate(0deg);
+}
+
+button:focus {
+    outline: none;
+}
+
 body {
     font-family: 'Open Sans', Arial, sans-serif;
 }
 
-.colored {
-    background-color: #EEC0C0;
-}
-
-.dark {
-    background-color: #47464B;
-    color: #EEC0C0;
-}
 
 h2 {
     font-size: 25px;
@@ -60,8 +100,12 @@ a:hover {
 
 /********PAGE HEADER STYLE********/
 
+.header-resume {
+    margin-bottom: 10px;
+}
+
 #photo {
-    padding: 40px;
+    padding: 16px;
     text-align: center;
 }
 
@@ -72,20 +116,19 @@ a:hover {
     border: 4px solid #DBB2B2;
 }
 
-.row-header .light, .row-content .light {
-    padding-left: 60px;
-}
 
 .header-resume .row-header .light {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 h1 {
-    font-size: 50px;
+    font-size: 46px;
     line-height: 50px;
     margin-bottom: 4px;
+    text-align: center;
 }
 
 .first-name {
@@ -97,17 +140,18 @@ h1 {
     letter-spacing: -4px;
 }
 
-h2.job {
-    font-size: 25px;
-    font-weight: 600;
+.header-resume h2 {
+    font-size: 23px;
+    font-weight: 400;
     letter-spacing: -1px;
+    margin-top: 14px;
 }
 
-h2.job span {
+.header-resume h2 span {
     position: relative;
 }
 
-h2.job span::before {
+.header-resume h2 span::before {
     content: '';
     position: absolute;
     bottom: 0;
@@ -118,10 +162,7 @@ h2.job span::before {
 
 
 /********PERSONAL INFO STYLE*********/
-.my-info {
-    display: flex;
-}
-
+/*Common styles*/
 #personal-information {
     display: flex;
     flex-direction: column;
@@ -131,9 +172,20 @@ h2.job span::before {
     font-weight: 600;
 }
 
+.colored {
+    background-color: #EEC0C0;
+}
+
 .dark {
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 3px;
+    background-color: #47464B;
+    color: #EEC0C0;
+}
+
+#contact-mobile-collapsed, #about-mobile-collapsed, #hobbies-mobile-collapsed {
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 ul {
@@ -143,7 +195,6 @@ ul {
 
 /*Contact section style */
 #contact ul {
-    margin-bottom: 50px;
     line-height: 20px;
 }
 
@@ -173,7 +224,6 @@ ul, .about-me {
     display: flex;
     justify-content: space-between;
     list-style-type: none;
-    margin-bottom: 30px;
 }
 
 .my-hobbies i {
@@ -194,22 +244,31 @@ ul, .about-me {
 /*********PROFESSIONAL INFO STYLE*********/
 
 /*Common style*/
+#professional-information {
+    margin-top: 25px;
+}
+
 #professional-information article {
     margin-top: 40px;
 }
 
-#professional-information .date .dot {
-    padding-top: 2px;
-}
 
 #professional-information .date .circle {
     font-size: 13px;
-    padding-top: 5px;
+    padding-top: 3px;
 }
+
+#professional-information .date .place {
+    padding-left: 17px;
+    font-style: italic;
+
+}
+
 
 #professional-information h2 {
     border-bottom: 2px solid #EEC0C0;
     padding-bottom: 10px;
+    text-align: center;
 }
 
 #professional-information h2 i {
@@ -229,7 +288,8 @@ ul, .about-me {
 
 
 /*References section style*/
-.reference {
+
+#ref2 {
     margin-bottom: 40px;
 }
 
@@ -243,4 +303,109 @@ ul, .about-me {
 
 .ref h4, .reference .phone-number {
     font-weight: 600;
+}
+
+
+/************************RESUME STYLE FOR TABLETS************************/
+@media (min-width: 768px) {
+
+}
+
+/************************RESUME STYLE FOR DESKTOPS************************/
+@media (min-width: 992px) {
+
+    /********COMMON STYLES********/
+    .row-header .light, .row-content .light {
+        padding-left: 60px;
+    }
+
+    .header-resume {
+        margin-bottom: 0;
+    }
+
+    button {
+        pointer-events: none;
+        cursor: default;
+    }
+
+    button .arrow {
+        display: none;
+    }
+
+    /********PAGE HEADER STYLE********/
+    .colored, .colored-except-mobile {
+        background-color: #EEC0C0;
+    }
+
+    .header-resume .row-header .light {
+        align-items: stretch;
+    }
+
+    h1 {
+        text-align: left;
+        font-size: 50px;
+        line-height: 57px;
+    }
+
+    .header-resume h2 {
+        margin: 0;
+        font-size: 25px;
+        font-weight: 600;
+    }
+
+    #photo {
+        padding: 40px;
+    }
+
+    /********PERSONAL INFO STYLE*********/
+    .my-info {
+        display: flex;
+    }
+
+    .dark {
+        margin-bottom: 30px;
+    }
+
+    #contact-mobile-collapsed, #about-mobile-collapsed, #hobbies-mobile-collapsed {
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+
+    /*Contact section style*/
+    #contact ul {
+        margin-bottom: 50px;
+    }
+
+    /*My hobbies section style*/
+    .my-hobbies {
+        margin-bottom: 30px;
+    }
+
+    /********PROFESSIONAL INFO STYLE*********/
+    #professional-information {
+        margin-top: 0px;
+    }
+
+    #professional-information h2 {
+        text-align: left;
+    }
+
+    #professional-information .date .dot {
+        padding-top: 2px;
+    }
+
+    #professional-information .date .circle {
+        padding-top: 5px;
+    }
+
+    #professional-information .date .place {
+        display: block;
+        padding-left: 0;
+        font-style: normal;
+    }
+
+    .reference {
+        margin-bottom: 40px;
+    }
+
 }
